Updated html code for webpage

--- a/index.html
+++ b/index.html
@@ -1,13 +1,114 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title></title>
-    <meta name="description" content="">
+    <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="">
+    <title>Alia's Portfolio</title>
+    <link rel="stylesheet" href="./assets/css/style.css">
   </head>
+
   <body>
+    <!-- Navigation -->
+    <header>
+      <h1>
+        Alia
+      </h1>
+      <nav>
+        <ul>
+          <li>
+            <a href="#about-me">About Me</a>
+          </li>
+          <li>
+            <a href="#my-work">My Work</a>
+          </li>
+          <li>
+            <a href="#contact-me">Contact Me</a>
+          </li>
+        </ul>
+      </nav>
+    </header>
+
+    <!-- About Me Section -->
+    <section id="about-me">
+      <div>
+        <h2>About Me</h2>
+        <p>
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
+          In quis voluptates cum libero, nulla nemo nobis tempore amet doloremque, 
+          adipisci est ullam laboriosam. Esse molestiae, 
+          deleniti laborum nam provident est?
+        </p>
+      </div>
+    </section>
+    
+    <!-- My Work Section -->
+    <section id="my-work">
+      <div>
+        <h2>My Work</h2>
+      </div>
+
+      <!-- Projects -->
+      <div>
+        <div>
+          <h3>1st Project</h3>
+          <p>This is my first project.</p>
+        </div>
+
+        <div>
+          <h4>2nd Project</h4>
+          <p>This is my second project.</p>
+        </div>
+
+        <div>
+          <h4>3rd Project</h4>
+          <p>This is my third project.</p>
+        </div>
+
+        <div>
+          <h4>4th Project</h4>
+          <p>This is my fourth project.</p>
+        </div>
+
+        <div>
+          <h4>5th Project</h4>
+          <p>This is my final project.</p>
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Me -->
+    <section id="contact-me">
+      <div>
+        <h2>Contact Me</h2>
+      </div>
+
+      <div>
+        <div>
+          <h4>Number</h4>
+        </div>
+
+        <div>
+          <h4>Email</h4>
+        </div>
+
+        <div>
+          <h4>GitHub</h4>
+        </div>
+
+        <div>
+          <h4>Facebook</h4>
+        </div>
+
+        <div>
+          <h4>Twitter</h4>
+        </div>
+
+        <div>
+          <h4>LinkedIn</h4>
+        </div>
+      </div>
+    </section>
+
+    <footer></footer>
   </body>
 </html>
