Added profile picture and minor css

--- a/index.html
+++ b/index.html
@@ -10,9 +10,13 @@
   <body>
     <!-- Navigation -->
     <header>
-      <h1>
-        Alia
-      </h1>
+      <div>
+        <h1>
+          Alia 
+        </h1>
+        <img class="profile-img" src="./assets/images/me.jpg" alt="Alia smiling">
+      </div>
+
       <nav>
         <ul>
           <li>
@@ -29,14 +33,15 @@
     </header>
 
     <!-- About Me Section -->
-    <section id="about-me">
+    <section id="about-me" class="about-me-section">
       <div>
         <h2>About Me</h2>
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. 
-          In quis voluptates cum libero, nulla nemo nobis tempore amet doloremque, 
-          adipisci est ullam laboriosam. Esse molestiae, 
-          deleniti laborum nam provident est?
+          Hello! My name is Alia Collier and welcome to my portfolio! 
+          I am currently 24 years old, and I am a native of Tennessee. 
+          While I may be a beginner in the coding world, I am enthusiastic about learning more to become a great developer. 
+          I am tenacious in my efforts to not only learn but also practice and master the ins and outs of programming. 
+          This tenacious grit is what not only drives me, but also, allows me to be a competitive force in a developer’s field.
         </p>
       </div>
     </section>
@@ -48,31 +53,46 @@
       </div>
 
       <!-- Projects -->
-      <div>
-        <div>
-          <h3>1st Project</h3>
-          <p>This is my first project.</p>
-        </div>
+    
+        <article>
+          <!-- place prjocet image here-->
+          <div>
+            <h3>Portfolio</h3>
+            <p>This is my first project.</p>
+          </div>
+        </article>
 
-        <div>
-          <h4>2nd Project</h4>
-          <p>This is my second project.</p>
-        </div>
+        <article>
+          <!-- place prjocet image here-->
+          <div>
+            <h4>Accessiblilty Standards</h4>
+            <p>This is my second project.</p>
+          </div>
+        </article>
 
-        <div>
-          <h4>3rd Project</h4>
-          <p>This is my third project.</p>
-        </div>
+        <article>
+          <!-- place prjocet image here-->
+          <div>
+            <h4>Run Buddy</h4>
+            <p>This is my third project.</p>
+          </div>
+        </article>
 
-        <div>
-          <h4>4th Project</h4>
-          <p>This is my fourth project.</p>
-        </div>
+        <article>
+          <!-- place prjocet image here-->
+          <div>
+            <h4>4th Project</h4>
+            <p>This is my fourth project.</p>
+          </div>
+        </article>
 
-        <div>
-          <h4>5th Project</h4>
-          <p>This is my final project.</p>
-        </div>
+        <article>
+          <!-- place prjocet image here-->
+          <div>
+            <h4>5th Project</h4>
+            <p>This is my final project.</p>
+          </div>
+        </article>
       </div>
     </section>
 
