Added project images

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
   </head>
 
   <body>
+    <a name="topPage"></a>
     <!-- Navigation -->
     <header>
       <div>
@@ -47,13 +48,13 @@
     </section>
     
     <!-- My Work Section -->
-    <section id="my-work">
+    <section id="my-work" class="my-work-section">
       <div>
         <h2>My Work</h2>
       </div>
 
       <!-- Projects -->
-    
+      <div>
         <article>
           <!-- place prjocet image here-->
           <div>
@@ -63,7 +64,7 @@
         </article>
 
         <article>
-          <!-- place prjocet image here-->
+          <img src="./assets/images/accessibility.png (4).jpg" alt="Image of Accessibility Project">
           <div>
             <h4>Accessiblilty Standards</h4>
             <p>This is my second project.</p>
@@ -72,6 +73,7 @@
 
         <article>
           <!-- place prjocet image here-->
+          <img src="./assets/images/RunBuddyScrnSht (2).jpg" alt="Image of Run Buddy Webpage">
           <div>
             <h4>Run Buddy</h4>
             <p>This is my third project.</p>
@@ -80,6 +82,7 @@
 
         <article>
           <!-- place prjocet image here-->
+          <img src="./assets/images/calendar.jfif" alt="Image of a Calendar">
           <div>
             <h4>4th Project</h4>
             <p>This is my fourth project.</p>
@@ -88,6 +91,7 @@
 
         <article>
           <!-- place prjocet image here-->
+          <img src="./assets/images/record.png" alt="Image of a vinyl record">
           <div>
             <h4>5th Project</h4>
             <p>This is my final project.</p>
@@ -129,6 +133,8 @@
       </div>
     </section>
 
-    <footer></footer>
+    <footer>
+      <a href="#topPage">Back to top of page</a>
+    </footer>
   </body>
 </html>
