Flexbox and CSS for Sections

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
       <div>
         <h1>
-          Alia 
+          Alia
         </h1>
         <img class="profile-img" src="./assets/images/me.jpg" alt="Alia smiling">
       </div>
@@ -49,87 +49,71 @@
     
     <!-- My Work Section -->
     <section id="my-work" class="my-work-section">
-      <div>
+      <div class="">
         <h2>My Work</h2>
       </div>
 
       <!-- Projects -->
       <div>
-        <article>
+        <article class="access-img">
+          <div>
+            <h3>
+              <a href="https://aliacollier.github.io/accessibility-standards-html/">Accessiblilty Standards</a>
+            </h3>
+            <p>HTML, CSS</p>
+          </div>
+        </article><br/>
+
+        <article class="runbuddy-img">
+          <div>
+            <h4>
+              <a href="https://aliacollier.github.io/run-buddy/">Run Buddy</a>
+            </h4>
+            <p>HTML, CSS</p>
+          </div>
+        </article><br/>
+
+        <article class="calendar-img">
+          <div>
+            <h4>Yearly Calendar App</h4>
+            <p>Coming Soon...</p>
+          </div>
+        </article><br/>
+
+        <article class="record-img">
           <!-- place prjocet image here-->
           <div>
-            <h3>Portfolio</h3>
-            <p>This is my first project.</p>
+            <h4>Media Organization App</h4>
+            <p>Coming Soon...</p>
           </div>
-        </article>
-
-        <article>
-          <img src="./assets/images/accessibility.png (4).jpg" alt="Image of Accessibility Project">
-          <div>
-            <h4>Accessiblilty Standards</h4>
-            <p>This is my second project.</p>
-          </div>
-        </article>
-
-        <article>
-          <!-- place prjocet image here-->
-          <img src="./assets/images/RunBuddyScrnSht (2).jpg" alt="Image of Run Buddy Webpage">
-          <div>
-            <h4>Run Buddy</h4>
-            <p>This is my third project.</p>
-          </div>
-        </article>
-
-        <article>
-          <!-- place prjocet image here-->
-          <img src="./assets/images/calendar.jfif" alt="Image of a Calendar">
-          <div>
-            <h4>4th Project</h4>
-            <p>This is my fourth project.</p>
-          </div>
-        </article>
-
-        <article>
-          <!-- place prjocet image here-->
-          <img src="./assets/images/record.png" alt="Image of a vinyl record">
-          <div>
-            <h4>5th Project</h4>
-            <p>This is my final project.</p>
-          </div>
-        </article>
+        </article><br/>
       </div>
     </section>
 
     <!-- Contact Me -->
-    <section id="contact-me">
-      <div>
+    <section id="contact-me" class="contact-me">
+      <div class="">
         <h2>Contact Me</h2>
-      </div>
+        <p>If there are any questions about the applications for this site or any general questions, please contact me!</p>
+      </div><br/>
 
-      <div>
+      <div class="contact-me-options">
         <div>
           <h4>Number</h4>
-        </div>
+          <p>123.456.7890</p>
+        </div><br/>
 
         <div>
           <h4>Email</h4>
-        </div>
+          <p>email@gmail.com</p>
+        </div><br/>
 
         <div>
           <h4>GitHub</h4>
-        </div>
-
-        <div>
-          <h4>Facebook</h4>
-        </div>
-
-        <div>
-          <h4>Twitter</h4>
-        </div>
-
-        <div>
-          <h4>LinkedIn</h4>
-        </div>
+          <p>
+            <a href="https://github.com/aliacollier">Alia Collier GitHub</a>
+          </p>
+        </div><br/>
       </div>
     </section>
 
