added third mod work

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
           <img src="./assets/images/Freesound-Notepad-Screenshot.jpg" alt="Image of Freesound Notepad website"/>
           <div>
             <h4>
-              <a href="https://aliacollier.github.io/Freesound-Notepad/">Freesound Notepad
+              <a href="https://aliacollier.github.io/Freesound-Notepad/" target="_blank">Freesound Notepad
             </h4>
             <ul>
               <li>HTML</li>
@@ -105,7 +105,7 @@
           <img src="./assets/images/accessibilityScrnShot.jpg" alt="screenshot of Accessibility Standards website"/>
           <div>
             <h4>
-              <a href="https://aliacollier.github.io/accessibility-standards-html/">Accessiblilty Standards</a>
+              <a href="https://aliacollier.github.io/accessibility-standards-html/" target="_blank">Accessiblilty Standards</a>
             </h4>
 
             <ul>
@@ -119,8 +119,9 @@
           <img src="./assets/images/RunBuddyScreenShot.jpg" alt="screenshot of Run Buddy Mock Website"/>
           <div>
             <h5>
-              <a href="https://aliacollier.github.io/run-buddy/">Run Buddy</a>
+              <a href="https://aliacollier.github.io/Run-Buddy/" target="_blank">Run Buddy</a>
             </h5>
+
             <ul>
               <li>HTML</li>
               <li>CSS</li>
@@ -129,24 +130,29 @@
         </article><br/>
 
         <article class="calendar-img">
+          <img src="./assets/images/Robo-GladiatorScrnShot.jpg" alt="screenshot of Robo-Gladiators browser game"/>
           <div>
-            <h5>Robot Gladiators</h5>
+            <h5>
+              <a href="https://aliacollier.github.io/Robot-Gladiators/" target="_blank">Robot Gladiators</a>
+            </h5>
+
             <ul>
               <li>HTML</li>
-              <li>CSS</li>
-              <li>JS</li>
+              <li>JavaScript</li>
             </ul>
           </div>
         </article><br/>
 
         <article class="record-img">
-          <!-- place prjocet image here-->
+          <img src="./assets/images/PasswordScreenShot.jpg" alt="screenshot of Random Password Generator website"/>
           <div>
-            <h5>Random Password Generator</h5>
+            <h5>
+              <a href="https://aliacollier.github.io/Password-Generator/" target="_blank">Random Password Generator</a> 
+            </h5>
             <ul>
               <li>HTML</li>
               <li>CSS</li>
-              <li>JS</li>
+              <li>JavaScript</li>
             </ul>
           </div>
         </article><br/>
